<package>
  <name>clock_tools</name>
  <version>0.0.1</version>
  <description>Visulization Tools</description>
  <maintainer email="450420922@qq.com">Pengchao Ding</maintainer>
  <license>BSD</license>
  <author>Pengchao Ding</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
</package>
